*Mon Aug 08 2010 Henri Gavin <.> 0.20100105
- add plot formatting ... 'set size ratio -1'  for equal XY plot scaling
- improve and simplify plot axis scaling for 3D animations
- add "-z" command line option to force 3D plotting
"-z" forces 3D plotting in Gnuplot
- update documentation regarding -z flag
- change .plt file comment "# M E S H   A N N O T A T I O N   F I L E\n" to
"# G N U P L O T   S C R I P T   F I L E \n"
- re-run examples and tune mesh exageration parameters

*Tue May 18 2010 Henri Gavin <.> 0.20100105
- remove email address from web-pages to cut down on spam

*Wed Mar 10 2010 Henri Gavin <.> 0.20100105
- improve documentaion on 3D coordinate transformations (manual section 7.3)

*Tue Feb 09 2010 Henri Gavin <.> 0.20100105
- bug fix. Internal forces and displacments in elements shorter than the
x-axis increment were previously calculated only at x=L.
Now these values are calcualted at both x=0 and x=L.  

*Wed Jan 20 2010 Henri Gavin <.> 0.20100105
- small grammar correction in user-manual.html

*Sat Jan 16 2010 Henri Gavin <.> 0.20100105
- create a set of exit codes with an exit code index in user-manual
- standardize usage of stderr prior to exit calls and stdout for "verbose"
- update user-manual.html with exit codes
- fix bug in path name parsing in frame3dd_io.c : 658 function output_path() 
In windows absolute path starts with "C:\" .. not "\" or "/"
In Unix and OS X the absolute path starts with "/"

*Thu Jan 14 2010 Henri Gavin <.> 0.20100105
- improve grammar in template.3dd
- update user-manual.html to specify the maximum number of load cases is 30 

*Mon Jan 11 2010 Henri Gavin <.> 0.20100105
- improve parsing data format for internal element forces and displacements
- separate deformed mesh and undeformed mesh data files
- shorten loops for writing mesh data files
- stream-line writing of gnuplot scripts ...
sections of duplicated code are combined and 
mode shapes for 3D frames are no longer plotted in 2D before being plotted in 3D